--- a/pocketinvent/pubspec.yaml
+++ b/pocketinvent/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_dotenv: ^5.1.0
 
+  # Export
+  csv: ^6.0.0
+  pdf: ^3.11.1
+  path_provider: ^2.1.4
+  share_plus: ^10.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
