--- a/pocketinvent/pubspec.yaml
+++ b/pocketinvent/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   path_provider: ^2.1.4
   share_plus: ^10.0.2
 
+  # Connectivity
+  connectivity_plus: ^6.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
