feat(scanner): Add live IMEI camera scanner with OCR detection
- Add real-time IMEI camera scanner widget with live preview
- Implement OCR-based IMEI detection and extraction from camera feed
- Add scan guide dialog with visual instructions and best practices
- Create comprehensive user guides for IMEI scanning in French and English
- Add flash toggle functionality for low-light scanning scenarios
- Integrate scanner into add phone workflow with automatic field population
- Add detailed testing checklist and OCR improvement documentation
- Update pubspec.yaml with required camera and OCR dependencies
- Include visual reference image for IMEI location identification
- Improve user experience with real-time feedback and error handling

--- a/pocketinvent/pubspec.yaml
+++ b/pocketinvent/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # OCR & Image
   google_mlkit_text_recognition: ^0.15.0
   image_picker: ^1.0.7
+  camera: ^0.11.0+2
 
   # Apple Sign In
   sign_in_with_apple: ^7.0.1
