--- a/pocketinvent/macos/Runner/Configs/AppInfo.xcconfig
+++ b/pocketinvent/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = pocketinvent
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.pocketinvent
+PRODUCT_BUNDLE_IDENTIFIER = com.amia.pocketinvent
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
